[gd_scene load_steps=2 format=3 uid="uid://bcfh82akf451s"]

[ext_resource type="Script" uid="uid://bqwuxhlx0gbb2" path="res://addons/RPG_Maker_Database/Editors/Databases/Enemies/enemy_action.gd" id="1_sutys"]

[node name="EnemyAction" type="VBoxContainer" node_paths=PackedStringArray("skill_option", "rating_spin_box")]
script = ExtResource("1_sutys")
skill_option = NodePath("HBoxContainer/SkillOptionButton")
rating_spin_box = NodePath("HBoxContainer/RatingSpinBox")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SkillOptionButton" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Skill Selected"
popup/item_0/id = 0

[node name="RatingSpinBox" type="SpinBox" parent="HBoxContainer"]
custom_minimum_size = Vector2(95.33, 0)
layout_mode = 2
min_value = 1.0
max_value = 9.0
value = 1.0
prefix = "Rating"

[node name="Options" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Options"]
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "Always"
popup/item_0/id = 0
popup/item_1/text = "Turn"
popup/item_1/id = 1
popup/item_2/text = "HP"
popup/item_2/id = 2
popup/item_3/text = "MP"
popup/item_3/id = 3
popup/item_4/text = "State"
popup/item_4/id = 4
popup/item_5/text = "Party Level"
popup/item_5/id = 5
popup/item_6/text = "Switch"
popup/item_6/id = 6

[node name="TurnSpinBox" type="SpinBox" parent="Options"]
layout_mode = 2

[node name="PlusLabel" type="Label" parent="Options"]
layout_mode = 2
text = "+"

[node name="ToTurnSpinBox" type="SpinBox" parent="Options"]
layout_mode = 2

[node name="StatSpinBox" type="SpinBox" parent="Options"]
layout_mode = 2
suffix = "%"

[node name="StatToLabel" type="Label" parent="Options"]
layout_mode = 2
text = "to"

[node name="StatSpinBox2" type="SpinBox" parent="Options"]
layout_mode = 2
suffix = "%"

[node name="StateOption" type="OptionButton" parent="Options"]
layout_mode = 2

[node name="LevelSpinBox" type="SpinBox" parent="Options"]
custom_minimum_size = Vector2(149.515, 0)
layout_mode = 2
min_value = 1.0
value = 1.0
suffix = "or above"

[node name="SwitchOptionButton" type="OptionButton" parent="Options"]
layout_mode = 2

[connection signal="item_selected" from="HBoxContainer/SkillOptionButton" to="." method="_on_skill_option_button_item_selected"]
[connection signal="value_changed" from="HBoxContainer/RatingSpinBox" to="." method="_on_rating_spin_box_value_changed"]
[connection signal="item_selected" from="Options/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="Options/TurnSpinBox" to="." method="_on_turn_spin_box_value_changed"]
[connection signal="value_changed" from="Options/ToTurnSpinBox" to="." method="_on_to_turn_spin_box_value_changed"]
[connection signal="value_changed" from="Options/StatSpinBox" to="." method="_on_stat_spin_box_value_changed"]
[connection signal="value_changed" from="Options/StatSpinBox2" to="." method="_on_stat_spin_box_2_value_changed"]
[connection signal="item_selected" from="Options/StateOption" to="." method="_on_state_option_item_selected"]
[connection signal="value_changed" from="Options/LevelSpinBox" to="." method="_on_level_spin_box_value_changed"]
[connection signal="item_selected" from="Options/SwitchOptionButton" to="." method="_on_switch_option_button_item_selected"]
